--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <meta name="description" content="Techium is a digital agency">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="icon" type="image/png" href="./favicon.png">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Homepage - Techium</title>
+    <meta name="description" content="Techium is a digital agency" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
 </head>
+
 <body>
     <header>
         <nav></nav>
@@ -21,15 +23,22 @@
             <h2>Services</h2>
             <h3>Design & Concept</h3>
             <h3>Digital Strategy</h3>
+            <h3>Content Strategy</h3>
             <h3>UX Design</h3>
             <h3>Web Development</h3>
             <h3>Social Media</h3>
         </section>
         <section>
             <h2>Works</h2>
-            <article><h3>Interior Design</h3></article>
-            <article><h3>Web Development</h3></article>
-            <article><h3>Personal Brand</h3></article>
+            <article>
+                <h3>Interior Design</h3>
+            </article>
+            <article>
+                <h3>Web Development</h3>
+            </article>
+            <article>
+                <h3>Personal Brand</h3>
+            </article>
         </section>
         <section>
             <h2>About Us</h2>
@@ -61,5 +70,5 @@
     </main>
     <footer>Footer</footer>
 </body>
-    
+
 </html>
